4.5 -> 5.0:
    - rpm.org: start hiding rpmsq internals.
    - jbj: fix: "trade a double free for a modest memory leak for the moment."
    - jbj: add headerModifyExtension everywhere.
    - jbj: add header{Init,Next,Free}Extension almost everywhere.
    - jbj: add headerRemoveExtension everywhere.
    - jbj: finish converting to headerAddExtension() everywhere.
    - jbj: change names of header tag integer types: s/INT32/UINT32/ etc.
    - jbj: finish bulldozing headerAddEntry throughout rpmbuild.
    - jbj: start bulldozing headerAddEntry throughout rpmbuild.
    - jbj: use HAE_t for signature tags, change int_32 to uint32_t where needed.
    - rpm.org: rpmhash.c: use size_t for keySize.
    - rpm.org: remove unnecessary rpmShowProgress() prototype.
    - jbj: add all-mode --macrosused option, debug rpmGetMacroEntries().
    - jbj: access all tag data integers as "unsigned", using <stdint.h> types.
    - rpm.org: fix segfault in %{lua: ...}'s rpm_print, no newline.
    - jbj: add lua/python getMacros bindings (mostly from <pjones@redhat.com>).
    - jbj: add a getter to retrieve macros with used and/or pattern filtering.
    - jbj: macro macro table/element internals opaque.
    - jbj: fix --rebuilddb --root /path.
    - rse: fix linking of RPM against PCRE's POSIX API under --with-pcre
    - jbj: upgrade to F8 & fix rpm-python. i18n tags w hdr_subscript are b0rked.
    - jbj: update loader maps for python lazy loads. rpm-python fixing to do.
    - jbj: insturment headerNextIterator() statistics.
    - jbj: trade a double free for a modest memory leak for the moment.
    - jbj: fix: install modes broken by forgetting to add '\0'.
    - jbj: mostly unbork HEAD. --install modes still non-functional.
    - jbj: don't modify strings exposed by method wrappers (#349091).
    - jbj: drill headerAddExtension everywhere.
    - jbj: header.c: insturment headerGet{Entry,Extension} switch, debug goop.
    - jbj: rpmchecksig.c: wrap headerAddEntry. headerAddOrAppend next ...